styles/place.css
:root {
    --scot-flag-blue: #0E63BA;
    --scot-tartan-red: #D0161F;
    --scot-tartan-dark-red: #771E25;
    --scot-tartan-yellow: #F5E827;
}

* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}

body {
    font-family: "Roboto", "Gill Sans", sans-serif;
    font-weight: 100;
}

header h1, footer {
    background-color: var(--scot-flag-blue);
    border-bottom: 10px solid var(--scot-tartan-yellow);
    padding: 10px;
    text-align: center;
    color: white;
}

main {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
}

main section {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 50px min-content;
    row-gap: 10px;
    padding: 10px;
    border-bottom: 1px solid var(--scot-flag-blue);
}

h2 {
    grid-column: span 2;
    width: 100%;
    text-align: center;
    font-size: x-large;
}

.label {
    text-align: right;
    margin: 0;
    padding: 0px 10px 0px 0px;
    font-weight: 400;
}

main picture img {
    border-bottom: 5px solid var(--scot-tartan-yellow);
    width: 100%;
    height: auto;
}

.weather img {
    grid-column: span 2;
    width: 75px;
    padding: 10px;
    margin: 10px auto;
    padding: 10px;
    text-align: center;
}

footer {
    font-weight: 400;
}

@media (min-width: 600px) {

    main section {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 60px min-content;
        row-gap: 5px;
        border-bottom: 1px solid var(--scot-flag-blue);
        padding: 0px 0px 5px 0px;
        background-color: white;
        max-width: 300px;
        font-size: 0.75em;
    }

    .data {
        width: 250px;
        position: absolute;
        left: 30px;
        top: 100px;
    }

    .weather {
        width: 300px;
        position: absolute;
        right: 30px;
        top: 330px;
    }
    
    main section h2 {
        grid-column: span 2;
        text-align: left;
        background-color: var(--scot-flag-blue);
        position: relative;
        left: -10px;
        padding: 10px 20px 25px 20px;
        margin: 10px 0px 5px 0px;
        width: 220px;
        color: white;
    }

    main picture img {
        width: 100%;
        height: 500px;
        padding: 0px;
        margin: 0px;
        border-bottom: 5px solid var(--scot-tartan-yellow);
        object-fit: cover;
    }
    
    .weather h2::after {
        content: "🌥️";
        display: block;
        width: 60px;
        height: 60px;
        position: absolute;
        top: -10px;
        right: 10px;
        font-size: 2em;
        font-weight: 700;
    }

    main section img {
        display: none;
    }
}

